test/typecheck/bad-brtable-type-mismatch.txt
;;; ERROR: 1
(module
  (func (result i32)
    block
      block
        f32.const 0
        br_table 0 1 
      end
      i32.const 1
      return
    end
    i32.const 2))
(;; STDERR ;;;
out/test/typecheck/bad-brtable-type-mismatch.txt:7:9: error: type mismatch in br_table, expected [i32] but got [f32]
        br_table 0 1 
        ^^^^^^^^
;;; STDERR ;;)
